# marine_detection

./: .gitignore  .gitmodules  .python-version  README.md  opencv_flow_seg.ipynb  pyproject.toml  requirements.txt
flow/: extract_flow_from_video.py  extract_motion_from_flow.py  fix_broken_flow_file_idxs.py  flow_to_video.py  replot_motion.py
imerit/: Aran_Video_Picks_Final.csv  Aran_Video_Picks_Revised.csv  README.md  bbox_utils.py  clip_videos_by_csv.py  coco2labelbox.ipynb  coco2stats.ipynb  extract_file_types.py  extract_image_dirs.py  flatten_directory.py  gen_motion_datasets.ipynb  imerit2coco.ipynb  imerit_annotations_stats.ipynb  imerit_imgs2vids.ipynb  imerit_stats.csv  imgs2vid.sh  json_utils.ipynb  labelbox2yolo.ipynb  labelbox_utils.ipynb  list_leaf_dirs.sh  vids2awsmanifest_and_frames.ipynb  yolo2crops.ipynb  yolo_utils.ipynb
scripts/: build_map.py  extract_image_pose.py  integrate_detections.py  rugosity_experiment.ipynb  utils.py
