[tool.poetry]
name = "marine-detection"
version = "0.1.0"
description = ""
authors = ["dxy"]
readme = "README.md"
packages = [{include = "marine_detection"}]

[tool.poetry.dependencies]
python = "~3.9"
gitpython = "^3.1.31"
matplotlib = "^3.7.1"
numpy = "^1.24.2"
opencv-python = "^4.7.0.72"
psutil = "^5.9.4"
pyyaml = "^6.0"
requests = "^2.28.2"
scipy = "^1.10.1"
thop = "^0.1.1.post2209072238"
torch = "^1.13.1"
torchvision = "^0.14.1"
tqdm = "^4.65.0"
tensorboard = "^2.12.0"
pandas = "^1.5.3"
seaborn = "^0.12.2"
pycryptodomex = "^3.17"
rospkg = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
